...
            "state": "translated",
            "value": "Готово"
          }
        }
      }
    },
    "Setup steps": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Шаги настройки"
          }
...
            "state": "translated",
            "value": "Начать"
          }
        }
      }
    },
    "Continue": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Продолжить"
          }
...
            "state": "translated",
            "value": "Найди меня в строке меню, когда захочешь поговорить."
          }
        }
      }
    },
    "Replay the setup tour": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Пройти настройку заново"
          }
...
